# scylladb

./: .clang-format  .dockerignore  .git-clean-branch-marker.txt  .git-copilot-note.txt  .gitattributes  .gitignore  .gitmodules  .gitorderfile  .lycheeignore  .mailmap  .pr-info  0001-gen_segmented_compress_params.py-coding-style-fixes.patch  AGENTS.md  CLUSTERING_RANGE_MIGRATION.md  CMakeLists.txt  CONTRIBUTING.md  COPILOT_TEMP_MARKER.txt  DEDICATION.txt  Dockerfile  Doxyfile  HACKING.md  IDL.md  IMPLEMENTATION_SUMMARY.md  LICENSE-ScyllaDB-Source-Available.md  MAINTAINERS  Makefile  NOTICE  NOTICE.txt  ORIGIN  README-DPDK.md  README-OSv  README-urchin.md  README.md  SCYLLA-VERSION-GEN  SCYLLA_ASSERT_CONVERSION_SUMMARY.md  SESSION.md  UNIMPLEMENTED_ENUM_ANALYSIS.md  Vagrantfile  absl-flat_hash_map.cc  absl-flat_hash_map.hh  (+326 more)
alternator/: CMakeLists.txt  auth.cc  auth.hh  base64.cc  base64.hh  conditions.cc  conditions.hh  consumed_capacity.cc  consumed_capacity.hh  controller.cc  controller.hh  error.cc  error.hh  executor.cc  executor.hh  executor_export.cc  executor_read.cc  executor_util.cc  executor_util.hh  export.cc  export.hh  expression_factory.cc  expressions.cc  expressions.g  expressions.hh  expressions_eval.hh  expressions_types.hh  extract_from_attrs.hh  http_compression.cc  http_compression.hh  parsed_expression_cache.cc  prepared_expression_cache.cc  rjson.cc  rjson.hh  rmw_operation.hh  scoped_item_list.hh  serialization.cc  serialization.hh  server.cc  server.hh  (+10 more)
api/: CMakeLists.txt  api.cc  api.hh  api_init.hh  authorization_cache.cc  authorization_cache.hh  cache_service.cc  cache_service.hh  client_routes.cc  client_routes.hh  collectd.cc  collectd.hh  column_family.cc  column_family.hh  commitlog.cc  commitlog.hh  compaction_manager.cc  compaction_manager.hh  config.cc  config.hh  cql_server_test.cc  cql_server_test.hh  endpoint_snitch.cc  endpoint_snitch.hh  error_injection.cc  error_injection.hh  failure_detector.cc  failure_detector.hh  gossiper.cc  gossiper.hh  hinted_handoff.cc  hinted_handoff.hh  lsa.cc  lsa.hh  messaging_service.cc  messaging_service.hh  raft.cc  raft.hh  scrub_status.hh  service_levels.cc  (+20 more)
audit/: CMakeLists.txt  audit.cc  audit.hh  audit_cf_storage_helper.cc  audit_cf_storage_helper.hh  audit_composite_storage_helper.cc  audit_composite_storage_helper.hh  audit_rule.cc  audit_rule.hh  audit_stdout_storage_helper.cc  audit_stdout_storage_helper.hh  audit_syslog_storage_helper.cc  audit_syslog_storage_helper.hh  preprocessed_audit_rules.cc  preprocessed_audit_rules.hh  storage_helper.hh
auth/: CMakeLists.txt  allow_all_authenticator.cc  allow_all_authenticator.hh  allow_all_authorizer.cc  allow_all_authorizer.hh  auth.cc  auth.hh  authenticated_user.cc  authenticated_user.hh  authentication_options.cc  authentication_options.hh  authenticator.cc  authenticator.hh  authorizer.cc  authorizer.hh  cache.cc  cache.hh  certificate_authenticator.cc  certificate_authenticator.hh  certificate_or_password_authenticator.cc  certificate_or_password_authenticator.hh  common.cc  common.hh  config.hh  data_resource.cc  data_resource.hh  default_authorizer.cc  default_authorizer.hh  ldap_role_manager.cc  ldap_role_manager.hh  maintenance_socket_authenticator.cc  maintenance_socket_authenticator.hh  maintenance_socket_authorizer.hh  maintenance_socket_role_manager.cc  maintenance_socket_role_manager.hh  password_authenticator.cc  password_authenticator.hh  passwords.cc  passwords.hh  permission.cc  (+22 more)
cdc/: CMakeLists.txt  cdc.cc  cdc.hh  cdc_extension.hh  cdc_options.hh  cdc_partitioner.cc  cdc_partitioner.hh  change_visitor.hh  generation.cc  generation.hh  generation_id.hh  generation_service.hh  log.cc  log.hh  metadata.cc  metadata.hh  split.cc  split.hh  stats.hh
compaction/: CMakeLists.txt  compaction.cc  compaction.hh  compaction_backlog_manager.hh  compaction_descriptor.hh  compaction_fwd.hh  compaction_garbage_collector.hh  compaction_group_view.hh  compaction_manager.cc  compaction_manager.hh  compaction_reenabler.hh  compaction_state.hh  compaction_strategy.cc  compaction_strategy.hh  compaction_strategy_impl.hh  compaction_strategy_state.hh  compaction_strategy_type.hh  compaction_weight_registration.hh  date_tiered_compaction_strategy.hh  exceptions.hh  incremental_backlog_tracker.cc  incremental_backlog_tracker.hh  incremental_compaction_strategy.cc  incremental_compaction_strategy.hh  leveled_compaction_strategy.cc  leveled_compaction_strategy.hh  leveled_manifest.hh  owned_ranges.hh  size_tiered_backlog_tracker.hh  size_tiered_compaction_strategy.cc  size_tiered_compaction_strategy.hh  sstables_max_purgeable.hh  strategy_control.hh  table_state.hh  task_manager_module.cc  task_manager_module.hh  time_window_compaction_strategy.cc  time_window_compaction_strategy.hh
cql3/: AbstractMarker.java  AssignmentTestable.java  Attributes.java  BatchQueryOptions.java  CFName.java  CMakeLists.txt  CQL3Row.java  CQL3Type.java  CQLStatement.java  ColumnCondition.java  ColumnIdentifier.java  ColumnSpecification.java  Constants.java  Cql.g  ErrorCollector.java  ErrorListener.java  IndexName.java  KeyspaceElementName.java  Lists.java  Maps.java  MultiColumnRelation.java  Operation.java  Operator.java  QueryHandler.java  QueryOptions.java  QueryProcessor.java  Relation.java  ResultSet.java  Sets.java  SingleColumnRelation.java  Term.java  TokenRelation.java  Tuples.java  TypeCast.java  UTName.java  UntypedResultSet.java  UpdateParameters.java  UserOptions.java  UserTypes.java  VariableSpecifications.java  (+100 more)
data_dictionary/: CMakeLists.txt  consistency_config_options.hh  data_dictionary.cc  data_dictionary.hh  impl.hh  keyspace_element.hh  keyspace_metadata.hh  storage_options.hh  user_types_metadata.hh
db/: BatchlogManager.java  CMakeLists.txt  Cell.java  ConsistencyLevel.java  CounterCell.java  CounterUpdateCell.java  DeletedCell.java  DeletionInfo.java  ExpiringCell.java  IMutation.java  LegacySchemaTables.java  OnDiskAtom.java  RangeTombstone.java  RowPosition.java  SystemKeyspace.java  api.hh  auth_version.hh  background.hh  batchlog.hh  cell.hh  (+112 more)
(+19674 files in other folders)
